semi arreglado el tema de la carga de la fecha

--- a/UI.Web/Site.Master
+++ b/UI.Web/Site.Master
@@ -7,6 +7,7 @@
         <form id="bodyForm" runat="server">
         <asp:Menu runat="server" ID="menu" DataSourceID="SiteMapDataSource">
         </asp:Menu>
+            <asp:LoginStatus ID="LoginStatus1" runat="server" />
         <asp:SiteMapDataSource ID="SiteMapDataSource" runat="server" />
         <div>
             <asp:ContentPlaceHolder ID="bodyContentPlaceHolder" runat="server">
