--- a/UI.Web/Site.Master
+++ b/UI.Web/Site.Master
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head runat="server">
         <title>Academia</title>
+        <script type="text/javascript" src="scripts/scripts.js"></script>
     </head>
     <body>
         <form id="bodyForm" runat="server">
