Algunos cambios de estilos, poco pero algo es algo

--- a/UI.Web/Estilos/Estilos.css
+++ b/UI.Web/Estilos/Estilos.css
@@ -1,4 +1,10 @@
 ﻿body {
         background-image:url('/Imagenes/texcal-liso_gris-t12.jpg');
 }
+ .panelCss
+{
+ background:white;   
+ vertical-align: middle;
+ border:2px solid blue;
+}
 
